# c-ares-playground

./: CMakeLists.txt  README.md  local-build.cmd
.github/workflows/: build-mingw.yml
src/: main.cpp
